--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "events",
+  "name": "react-events",
   "version": "0.0.1",
   "description": "react demo",
   "main": "index.js",
@@ -14,5 +14,12 @@
   "bugs": {
     "url": "https://github.com/saw/events/issues"
   },
-  "homepage": "https://github.com/saw/events"
+  "homepage": "https://github.com/saw/events",
+  "dependencies": {
+    "express": "^4.11.1",
+    "react": "^0.12.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10"
+  }
 }
