--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
   "homepage": "https://github.com/saw/events",
   "dependencies": {
     "express": "^4.11.1",
+    "express-session": "^1.10.1",
+    "passport": "^0.2.1",
+    "passport-google": "^0.3.0",
+    "path-to-regexp": "^1.0.3",
     "react": "^0.12.2"
   },
   "devDependencies": {
-    "gulp": "^3.8.10"
+    "browserify": "^8.1.1",
+    "gulp": "^3.8.10",
+    "gulp-uglify": "^1.1.0",
+    "reactify": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
