--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "ejs": "~2.1.4",
     "express": "^4.11.1",
     "express-session": "^1.10.1",
+    "lodash": "^2.4.1",
     "mongoose": "^3.8.21",
     "morgan": "~1.5.1",
+    "nedb": "^1.1.1",
     "node-jsx": "^0.12.4",
-    "passport": "^0.2.1",
-    "passport-google": "^0.3.0",
     "path-to-regexp": "^1.0.3",
     "react": "^0.12.2",
     "serve-favicon": "~2.2.0"
@@ -24,8 +24,14 @@
   "devDependencies": {
     "browserify": "^8.1.1",
     "gulp": "^3.8.10",
+    "gulp-if": "^1.2.5",
+    "gulp-livereload": "^3.5.0",
+    "gulp-notify": "^2.1.0",
+    "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.2",
     "reactify": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.2.1"
   }
 }
