--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "path-to-regexp": "^1.0.3",
     "q": "^1.1.2",
     "react": "^0.12.2",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "superagent": "^0.21.0"
   },
   "devDependencies": {
+    "aliasify": "^1.5.1",
     "browserify": "^8.1.1",
     "gulp": "^3.8.10",
     "gulp-if": "^1.2.5",
