--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ejs": "~2.1.4",
     "express": "^4.11.1",
     "express-session": "^1.10.1",
+    "flux": "^2.0.1",
     "lodash": "^2.4.1",
+    "microevent": "^1.0.0",
     "mongoose": "^3.8.21",
     "morgan": "~1.5.1",
     "nedb": "^1.1.1",
