--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.11.1",
     "express-session": "^1.10.1",
     "flux": "^2.0.1",
+    "htmlstrip-native": "0.0.6",
     "lodash": "^2.4.1",
     "microevent": "^1.0.0",
     "mongoose": "^3.8.21",
