--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "gulp-if": "^1.2.5",
     "gulp-livereload": "^3.5.0",
     "gulp-notify": "^2.1.0",
+    "gulp-sass": "^1.3.2",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.2",
